--- a/test/dmautils_autoinc_compression_test/am62ax-sk/c75ss0-0_freertos/ti-c7000/makefile.hostemu
+++ b/test/dmautils_autoinc_compression_test/am62ax-sk/c75ss0-0_freertos/ti-c7000/makefile.hostemu
@@ -8,8 +8,15 @@ include $(MCU_PLUS_SDK_PATH)/devconfig/devconfig.mak
 
 CG_TOOL_ROOT=$(CGT_TI_C7X_HOSTEMU_PATH)
 
-CC=$(CGT_TI_C7X_HOSTEMU_PATH)/bin/g++-5 -c
-LNK=$(CGT_TI_C7X_HOSTEMU_PATH)/bin/g++-5
+OS_VERSION := $(shell cat /etc/os-release | grep VERSION_ID= | sed -e "s|VERSION_ID=\"||" | sed -e "s|\"||")
+ifeq ($(OS_VERSION),18.04)
+	GCC_VERSION?=5
+else
+	GCC_VERSION?=11
+endif
+
+CC=$(CGT_TI_C7X_HOSTEMU_PATH)/bin/g++-$(GCC_VERSION) -c
+LNK=$(CGT_TI_C7X_HOSTEMU_PATH)/bin/g++-$(GCC_VERSION)
 
 PROFILE?=release
 ConfigName:=$(PROFILE)
